...
            "state" : "translated",
            "value" : "Подтвердить email"
          }
        }
      }
    },
    "auth.email" : {
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Email"
          }
...
    },
    "auth.logout" : {
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Выйти"
          }
        }
      }
    },
    "auth.logout_warning" : {
      "extractionState" : "stale",
...
    },
    "home.favorites" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Favorites"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Избранное"
...
    },
    "home.profile" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Profile"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Профиль"
...
    "kit.cancel" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancel"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Отмена"
          }
        }
      }
    },
    "kit.caption" : {
      "extractionState" : "manual",
...
            "value" : "Sign out?"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Выйти из аккаунта?"
          }
        }
      }
    },
    "profile.middleName" : {
      "localizations" : {
...
